--- a/voting-server/package.json
+++ b/voting-server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node index.js",
+    "test": "mocha --compilers js:babel-core/register  --require ./test/test_helper.js  --recursive",
+    "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +18,12 @@
     "chai": "^4.2.0",
     "mocha": "^5.2.0"
   },
-  "scripts":{
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
-    "test:watch": "npm run test -- --watch"
-  },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
+  },
+  "dependencies": {
+    "socket.io": "^2.1.1"
   }
 }
